--- a/libs/common/src/lib/entities/entity-list/entity-list.component.html
+++ b/libs/common/src/lib/entities/entity-list/entity-list.component.html
@@ -1,4 +1,98 @@
 <div
+  #listContainer
+  class="ner-list-container">
+  <pa-table columns="96px 1fr 3fr">
+    <pa-table-header>
+      <pa-table-row>
+        <pa-table-cell header><div class="whitespace"></div></pa-table-cell>
+        <pa-table-cell header>{{ 'generic.named-entities' | translate }}</pa-table-cell>
+        <pa-table-cell header>{{ 'ner-list.duplicates' | translate }}</pa-table-cell>
+      </pa-table-row>
+    </pa-table-header>
+
+    <pa-table-row
+      *ngFor="let ner of entities; trackBy: trackByValue"
+      [clickable]="deletedNer !== ner.value"
+      [disabled]="deletedNer === ner.value">
+      <pa-table-cell>
+        <div
+          class="table-row-actions"
+          [class.stay-visible]="duplicatedEntity?.value === ner.value">
+          <pa-button
+            icon="trash"
+            kind="destructive"
+            aspect="basic"
+            iconSize="small"
+            size="small"
+            paTooltip="ner-list.delete-entity-tooltip"
+            [disabled]="deletedNer === ner.value"
+            (click)="deleteEntity(ner)">
+            {{ 'ner-list.add-duplicate-tooltip' | translate }}
+          </pa-button>
+          <pa-button
+            icon="circle-plus"
+            aspect="basic"
+            iconSize="small"
+            size="small"
+            paTooltip="ner-list.add-duplicate-tooltip"
+            [paPopup]="duplicateOf"
+            [disabled]="deletedNer === ner.value">
+            {{ 'ner-list.add-duplicate-tooltip' | translate }}
+          </pa-button>
+          <pa-popup
+            #duplicateOf
+            (onClose)="duplicatedEntity = undefined"
+            (onOpen)="openDuplicatesOfPopup(ner)">
+            <div class="duplicate-of-popup">
+              <label
+                for="entityInput"
+                class="body-xs">
+                {{ 'ner-list.duplicates-of' | translate }}
+              </label>
+              <input
+                #entityInput
+                id="entityInput"
+                class="entity-input"
+                paFocusable
+                (keyup)="getMatchingEntities($event)" />
+              <ul class="suggested-entities">
+                <pa-option
+                  *ngFor="let entity of matchingEntities"
+                  [value]="entity.value"
+                  (selectOption)="addDuplicateOf(entity)">
+                  {{ entity.value }}
+                </pa-option>
+              </ul>
+            </div>
+          </pa-popup>
+        </div>
+      </pa-table-cell>
+      <pa-table-cell>
+        {{ ner.value }}
+      </pa-table-cell>
+      <pa-table-cell>
+        <div class="duplicate-list">
+          <div *ngFor="let duplicate of ner.represents">
+            <pa-button
+              class="table-row-action"
+              icon="circle-minus"
+              aspect="basic"
+              iconSize="small"
+              size="small"
+              paTooltip="ner-list.remove-duplicate-tooltip"
+              (click)="removeDuplicate(ner, duplicate)">
+              {{ 'ner-list.remove-duplicate-tooltip' | translate }}
+            </pa-button>
+            {{ duplicate }}
+          </div>
+        </div>
+      </pa-table-cell>
+    </pa-table-row>
+  </pa-table>
+</div>
+
+<!--
+<div
   *ngIf="filteredEntities() as entities"
   class="entity-list"
   cdkDropListGroup>
@@ -80,3 +174,4 @@
     </ng-container>
   </cdk-virtual-scroll-viewport>
 </div>
+-->
