--- a/libs/sistema/styles/_variables.scss
+++ b/libs/sistema/styles/_variables.scss
@@ -1,3 +1,5 @@
 @import '../../pastanaga-angular/projects/pastanaga-angular/src/styles/variables';
 
 @import 'mixins';
+
+$scrollbar-width: rhythm(2);
