--- a/libs/common/src/lib/entities/entity-list/entity-list.component.scss
+++ b/libs/common/src/lib/entities/entity-list/entity-list.component.scss
@@ -1,80 +1,60 @@
-@import '../tokens';
 @import 'apps/dashboard/src/variables';
 
-$itemHeight: rhythm(6);
-
-.entity-list {
-  background-color: $color-light-stronger;
-
-  &-virtual {
-    @include scrollbar-black(var(--stf-gray-lighter));
-    .entity-list-item {
-      padding-right: rhythm(4);
+:host {
+  .ner-list-container {
+    margin-top: rhythm(3);
+    max-height: calc(100% - #{rhythm(5)} - #{rhythm(3)});
+    overflow: auto;
+    padding-right: $scrollbar-width;
+  }
+  pa-table ::ng-deep {
+    .pa-table-grid--row:hover .table-row-action,
+    .pa-table-grid--row:hover .table-row-actions {
+      opacity: 1;
     }
   }
 
-  &-empty {
-    height: $itemHeight;
+  .whitespace {
+    background: $color-light-stronger;
+    height: 100%;
+    width: 100%;
+    z-index: 1;
   }
 
-  &-item {
+  .table-row-action,
+  .table-row-actions {
+    opacity: 0;
+    transition: opacity $transition-hint;
+  }
+
+  .table-row-actions {
     display: flex;
-    height: $itemHeight;
-    transition: 0.2s background-color;
-    &.highlighted {
-      background-color: rgba(var(--stf-yellow-rgb), 0.1);
-    }
+    gap: rhythm(1);
 
-    &:last-child {
-      .entity-list-item-cell {
-        border-bottom: 0;
-      }
+    &.stay-visible {
+      opacity: 1;
     }
+  }
 
-    &-cell {
-      display: flex;
-      align-items: center;
+  .duplicate-list {
+    display: flex;
+    gap: rhythm(1);
+  }
+
+  .duplicate-of-popup {
+    display: flex;
+    flex-direction: column;
+
+    .entity-input {
+      border: none;
       border-bottom: 1px solid $color-neutral-regular;
-
-      &.cell-color {
-        flex: $entity-table-color-flex;
-      }
-      &.cell-name {
-        flex: $entity-table-name-flex;
-      }
-      &.cell-synonyms {
-        flex: $entity-table-synonyms-flex;
-      }
-      &.cell-description {
-        flex: $entity-table-description-flex;
-      }
-      &.cell-presence {
-        flex: $entity-table-presence-flex;
-      }
-      &.cell-actions {
-        flex: 0 0 86px;
-      }
+      margin-bottom: rhythm(1);
     }
 
-    .cell-color {
-      border-bottom: 0;
-      .color-border {
-        width: rhythm(1);
-        height: 100%;
-        background-color: var(--stf-gray-background);
-      }
-    }
-
-    .cell-name {
-      min-width: 0;
-      padding: 0 rhythm(2) 0 rhythm(0.25);
-      .drag {
-        max-width: 100%;
-        &.active {
-          cursor: move;
-          background-color: $color-light-stronger;
-        }
-      }
+    .suggested-entities {
+      list-style: none;
+      margin: 0;
+      padding: 0;
     }
   }
 }
