--- a/libs/sistema/theme/tokens/_buttons.tokens.scss
+++ b/libs/sistema/theme/tokens/_buttons.tokens.scss
@@ -16,6 +16,7 @@ $padding-button-icon-text-medium: rhythm(0.5) rhythm(2) rhythm(0.5) rhythm(1.5);
 $padding-button-icon-text-large: rhythm(1) rhythm(2) rhythm(1) rhythm(1.5);
 
 $padding-button-icon-small: rhythm(1);
+$padding-button-icon-medium: rhythm(1);
 $padding-button-icon-large: rhythm(1.5);
 
 $font-size-button-medium: font-size(s);
