[sc-4337] Remove last trace of fxLayout in Dashboard
- Remove last trace of fxLayout in Dashboard
- cleanup unused components and routes

--- a/libs/common/src/lib/page-not-found/page-not-found.component.html
+++ b/libs/common/src/lib/page-not-found/page-not-found.component.html
@@ -1,18 +1,39 @@
 <div class="user-background">
+  <div class="page-not-found-container">
+    <div class="page-not-found-content">
+      <div class="logo">
+        <img
+          src="assets/logos/logo.svg"
+          alt="Nuclia" />
+      </div>
+
+      <div class="message">
+        <div class="error-code">404</div>
+
+        <div class="display-s">Sorry but we couldn’t find the page you’re looking for</div>
+      </div>
+
+      <div class="body-m">
+        <a
+          class="back-link"
+          href="/">
+          Go back to Home
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!--
+<div class="user-background">
   <div class="outter_notfound_form">
     <div class="inner_notfound_form">
       <div class="logo">
         <img src="assets/logos/logo.svg" />
       </div>
       <div class="notfound_content">
-        <div
-          id="error-404"
-          fxLayout="column"
-          fxLayoutAlign="center center">
-          <div
-            class="content"
-            fxLayout="column"
-            fxLayoutAlign="center center">
+        <div id="error-404">
+          <div class="content">
             <div class="error-code">404</div>
 
             <div class="message">Sorry but we could not find the page you are looking for</div>
@@ -30,3 +51,4 @@
     </div>
   </div>
 </div>
+-->
