--- a/libs/common/src/lib/page-not-found/page-not-found.component.scss
+++ b/libs/common/src/lib/page-not-found/page-not-found.component.scss
@@ -1,154 +1,40 @@
-@import '../../../../pastanaga/src/lib/styles/stf';
+@import 'apps/dashboard/src/variables';
 
 .user-background {
-  // H2SoFe LZgQXe TFhTPc
-  @include media-breakpoint('lt-sm') {
-    background-color: white;
-    background-image: none;
-  }
-
-  @include media-breakpoint('gt-xs') {
-    min-height: 100vh;
-    flex-direction: column;
-    -webkit-flex-direction: column;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    position: relative;
-  }
+  height: 100%;
+  position: relative;
 }
 
-.user-background:before,
-.user-background:after {
-  @include media-breakpoint('gt-xs') {
-    -webkit-flex-grow: 1;
-    flex-grow: 1;
-    content: '';
-    display: block;
-    height: 24px;
-  }
-}
-
-.user-background,
-.user-background:before,
-.user-background:after,
-.user-background * {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-.user-background:before {
-  min-height: 30px;
-}
-
-app-page-not-found {
-  #error-404 {
-    width: 100%;
-    height: 100%;
-
-    .content {
-      .error-code {
-        font-size: 112px;
-        text-align: center;
-        line-height: 1;
-        margin-bottom: 16px;
-        font-weight: 600;
-      }
-
-      .message {
-        font-size: 24px;
-        text-align: center;
-      }
-
-      .actions {
-        margin-top: 50px;
-        font-size: 15px;
-        text-align: center;
-      }
-
-      .search {
-        width: 100%;
-        height: 56px;
-        line-height: 56px;
-        margin: 48px auto 16px auto;
-        padding: 16px;
-        border: 1px solid;
-        border-radius: 28px;
-
-        input {
-          padding: 0 0 0 16px;
-        }
-      }
-
-      .back-link {
-        text-decoration: none;
-      }
-    }
-  }
-}
-
-.outter_notfound_form {
-  // RAYh1e LZgQXe qmmlRd
-  @include media-breakpoint('gt-xs') {
-    flex-shrink: 0;
-    border: 1px solid #dadce0;
-    -webkit-border-radius: 8px;
-    border-radius: 8px;
-    display: block;
-    margin: 0 auto;
-    min-height: 0;
-    width: 450px;
-    -webkit-transition: 0.2s;
-    transition: 0.2s;
-  }
-
+.page-not-found-container {
+  align-items: center;
   display: flex;
-  flex-direction: column;
-  background: #fff;
-  max-width: 100%;
-  position: relative;
-  z-index: 2;
-}
+  justify-content: center;
+  height: 100%;
+  width: 100%;
 
-.inner_notfound_form {
-  // xkfVF
-  @include media-breakpoint('gt-xs') {
-    height: auto;
-    min-height: 500px;
-    overflow-y: auto;
-    padding: 48px 40px 36px;
-    -webkit-transition: 0.2s;
-    transition: 0.2s;
-  }
-  -webkit-flex-grow: 1;
-  flex-grow: 1;
-  overflow: hidden;
-  padding: 24px 50px 36px;
-}
+  .page-not-found-content {
+    background: $color-light-stronger;
+    border-radius: rythm(1);
+    display: flex;
+    flex-direction: column;
+    gap: rhythm(4);
+    padding: rhythm(4) rhythm(3);
+    text-align: center;
+    width: rhythm(56);
 
-.notfound_content {
-  // DRS7Fe bxPAYd k6Zj8d
-  overflow: hidden;
-  @include media-breakpoint('gt-xs') {
-    padding-left: 40px;
-    padding-right: 40px;
-    margin: auto -40px;
-  }
-  padding-left: 24px;
-  padding-right: 24px;
-  margin: auto -24px;
-}
+    .logo img {
+      height: rhythm(8);
+    }
 
-.logo {
-  height: 96px;
-  margin: 0 auto;
-  overflow: visible;
-  position: relative;
-  text-align: center;
+    .display-s {
+      font-weight: $font-weight-semi-bold;
+      margin-top: rhythm(2);
+    }
 
-  img {
-    height: 64px;
+    .error-code {
+      font-weight: $font-weight-semi-bold;
+      font-size: rhythm(14);
+      line-height: rhythm(14);
+    }
   }
 }
