Add card authentication

--- a/apps/dashboard/src/app/account/billing/checkout/checkout.component.html
+++ b/apps/dashboard/src/app/account/billing/checkout/checkout.component.html
@@ -258,6 +258,7 @@
           kind="primary">
           {{ 'billing.review_confirm' | translate }}
         </pa-button>
+        <nsi-spinner *ngIf="subscribing"></nsi-spinner>
       </div>
     </div>
   </div>
