Display selected tier

--- a/apps/dashboard/src/app/account/billing/calculator/calculator.component.html
+++ b/apps/dashboard/src/app/account/billing/calculator/calculator.component.html
@@ -5,7 +5,7 @@
   <pa-modal-content>
     <form>
       <div>
-        <div class="title-s">{{ 'billing.tier_select.title' | translate }}</div>
+        <div class="title-s">{{ 'billing.subscription_tier' | translate }}</div>
         <div>{{ 'billing.tier_select.help' | translate }}</div>
         <pa-radio-group
           name="radio-tier"
