[sc-4744] NER family edition

--- a/libs/common/src/lib/entities/entities.component.html
+++ b/libs/common/src/lib/entities/entities.component.html
@@ -45,7 +45,6 @@
             (click)="addEntity()">
             {{ 'ner-family-toolbar.add-button' | translate }}
           </pa-button>
-          <!-- blocked by https://app.shortcut.com/flaps/story/5117/missing-a-way-to-update-entities-group-title-and-color
           <pa-button
             *ngIf="selectedFamily.custom"
             aspect="basic"
@@ -53,7 +52,7 @@
             paTooltip="ner-family-toolbar.edit-button"
             (click)="updateFamily()">
             {{ 'ner-family-toolbar.edit-button' | translate }}
-          </pa-button>-->
+          </pa-button>
           <pa-button
             aspect="basic"
             icon="trash"
