[sc-5154]: Prevent blank page when reloading kb settings

--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-profile/knowledge-box-profile.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-profile/knowledge-box-profile.component.html
@@ -63,7 +63,7 @@
           <pa-radio
             *ngFor="let value of conf.data.options"
             [value]="value.value">
-            {{ value.name }}
+            {{ value.name.toLowerCase() }}
           </pa-radio>
         </pa-radio-group>
       </div>
