--- a/apps/manager-v2/src/app/app.component.html
+++ b/apps/manager-v2/src/app/app.component.html
@@ -1,2 +1,7 @@
-<nuclia-nx-welcome></nuclia-nx-welcome>
 <router-outlet></router-outlet>
+<div class="version">Version: {{ version }}</div>
+<aside id="pa-toasts-block">
+  <div class="pa-toasts-container">
+    <div #toastsContainer></div>
+  </div>
+</aside>
