--- a/apps/manager-v2/src/styles.scss
+++ b/apps/manager-v2/src/styles.scss
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'libs/sistema/theme/fonts';
+@import 'libs/pastanaga-angular/projects/pastanaga-angular/src/styles/core';
+@import 'libs/common/src/lib/base/css-variables';
+@import 'libs/sistema/styles/apps-common';
+
+:root {
+  --app-background-color: $color-light-stronger;
+}
