--- a/apps/dashboard/src/app/account/billing/calculator/calculator.component.html
+++ b/apps/dashboard/src/app/account/billing/calculator/calculator.component.html
@@ -1,4 +1,4 @@
-<pa-modal-dialog>
+<pa-modal-advanced>
   <pa-modal-title>
     <h2>{{ 'billing.budget_calculator' | translate }}</h2>
   </pa-modal-title>
@@ -62,4 +62,4 @@
       {{ 'billing.save_budget' | translate }}
     </pa-button>
   </pa-modal-footer>
-</pa-modal-dialog>
+</pa-modal-advanced>
